css/secondstylesheet.css
:root {
    --primary-color: rgb(252, 154, 9);
    --secondary-color: rgb(49, 5, 0);
    --blurry-bg: rgba(49, 5, 0, 0.463);

}

html {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    scroll-behavior: smooth;

}

header {
    width: 100%;
}

body {
    background-image: url(https://w.wallhaven.cc/full/n6/wallhaven-n683ql.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    overflow-x: hidden;
    width: 100%;
    margin:0;

}
.tiling{
    position: fixed;
    top: 0;
    left: 0;

    width: 100vw!important;  
    height: 100vh;
    overflow: hidden;
    object-fit: cover;
    z-index: -1;
}
*,
*::before,
*::after {
    box-sizing: border-box;
}

header {
    position: sticky;
    z-index: 1000;
    top: 0;
    
}

a,
a:visited,
a:active {
    color: var(--primary-color);
    text-decoration: none;
}

.navigation {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    width: 100%;
    background: rgba(10, 7, 1, 0.301);
    backdrop-filter: blur(40px);

}

.container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    padding: 0 2rem;
}

.link-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-left: auto;
}

.logo {
    font-size: 2rem;
    font-weight: bold;
    text-decoration: none;
    color: var(--primary-color) !important;
    cursor: pointer;
}

.container .navLinks {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 1.25rem;
    list-style: none;
}

.container .navLinks li a {
    color: var(--primary-color);
    text-decoration: none;
    font-size: 1.25rem;
    font-weight: bold;
    padding: 3px 10px;
    border-radius: 10px;
    white-space: nowrap;
    border: 3px transparent;
    transition: all 500ms ease;
}

.container .navLinks li a:hover {
    background: transparent;
    background-color: rgba(49, 5, 0, 0.596);
    border-radius: 30px;
    transition: all 500ms ease-in-out;
}

.menu-toggle {
    background: transparent;
    padding: 1rem;
    cursor: pointer;
    border: none;
    display: none;
    transition: transform 1000ms ease-in-out;
    transform: rotate3d(0, 0, 0, 180deg);
}

.menu-toggle:hover {
    transform: rotate3d(1, 0, 0, 180deg);
}

.menu-toggle:hover .spanBar {
    background-color: var(--secondary-color);
}

.spanBar {
    display: block;
    width: 2rem;
    height: 5px;
    margin: 5px auto;
    background: var(--primary-color);
    transition: all 500ms ease-in-out;
}

.hidden-checkbox {
    display: none;
}

.menu-overlay-blur {
    position: fixed;
    inset: 0;
    background: rgba(10, 7, 1, 0.301);
    backdrop-filter: blur(20px);
    opacity: 0;
    pointer-events: none;
    transition: all 300ms ease-in-out;
    z-index: 900;
}


.goto {
    width: clamp(2rem, 4vw, 5rem);
    height: 40px;
    width: 40px;
    position: fixed;
    bottom: 1%;
    right: 1%;
    transition: all 500ms ease-in-out;

}

.goto:hover {
    animation: bounce 3s infinite;
    transition: all 500ms ease-in-out;
}

@keyframes bounce {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);

    }

    40% {
        transform: translateY(-3px);
    }

    60% {
        transform: translateY(-5px);
    }
}


/* migracion de photocards */


img {
    -webkit-user-drag: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.header-div {
    text-align: center;
    color: var(--primary-color);
}


.photocard {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 280px;
    height: 600px;
    position: relative;
    text-align: center;
    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.658);
    border-radius: 12px 0;
    overflow: hidden;
}

.photocard h3 {
    font-weight: bold;
}

.photocard p {
    font-size: medium;
    max-width: 100%;
    word-break: break-word;
}

.design {
    max-height: 500px;
    overflow-y: auto;
    scrollbar-width: none;
    opacity: 1;
    transition: all 1000ms ease-in-out;
    margin-bottom: 1rem;

}

.hidden-div {
    max-height: 0;
    opacity: 0;
}

.photocard img {
    width: 100%;
    height: 180px;
    object-fit: contain;
}

.photocard img:hover {
    opacity: .85;
}

.photocard .buttonShowcase {
    display: block;
    position: relative;
    bottom: .5rem;
    left: 50%;
    transform: translateX(-50%);
    transform-origin: center;
    transition: all 500ms ease-in-out;
}

.framed-picture {
    transition: 1000ms ease-out;
}

.framed-picture:hover {
    transition: 1000ms ease-out;
    max-width: .75;
}

#kurapika {
    color: rgb(4, 0, 248);
    background-color: rgba(255, 196, 1, 0.801);
}

#pKura {
    background-color: rgb(250, 230, 5);
    transition: 1000ms ease-out;
}

#pKura:hover {
    background-color: rgba(111, 96, 245, 0.664);
    transition: 1000ms ease-out;
}

#kurapika .buttonShowcase {
    background-color: rgb(4, 0, 248);
    border-color: rgba(111, 96, 245, 0.664);
    color: rgb(250, 230, 5);

}


#gon {
    background-color: rgba(2, 83, 42, 0.795);
    color: rgb(5, 255, 5);
}

#pGon {
    background-color: rgba(0, 43, 0, 0.904);
    transition: 1000ms ease-out;
}

#pGon:hover {
    background-color: rgba(12, 136, 0, 0.849);
    transition: 1000ms ease-out;
}

#gon .buttonShowcase {
    background-color: rgba(12, 136, 0, 0.849);
    border-color: rgb(5, 255, 5);
    color: rgb(5, 248, 126);
}

#killua {
    color: rgb(155, 252, 255);
    background-color: rgba(15, 0, 99, 0.74);
}

#pKillua {
    background-color: rgba(14, 25, 31, 0.582);
    transition: 1000ms ease-out;
}

#pKillua:hover {
    background-color: rgba(9, 206, 255, 0.822);
    transition: 1000ms ease-out;
}
/* ... */

